dsl_new/python/LogicFileParser.py
# Generated from LogicFileParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LogicFileParser ( Parser ):

    grammarFileName = "LogicFileParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'enum'", "'{'", "'}'", "'('", "')'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'!='", "'=='", "'>='", "'<='", 
                     "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>>'", 
                     "'<<'", "'?'", "'='", "'.'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'floor'", "'ceil'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'if'", "<INVALID>", "'else'", 
                     "'switch'", "'case'", "<INVALID>", "'yields '", "<INVALID>", 
                     "<INVALID>", "'helper'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'item '", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'entrance'", "<INVALID>", "'location'", "'event'", 
                     "'region'", "'logic'", "'options'", "'option'", "'strings'", 
                     "'string'", "'ints'", "'int'", "'floats'", "'float'", 
                     "'bool'", "'min'", "'max'", "<INVALID>", "':'" ]

    symbolicNames = [ "<INVALID>", "Comment", "MLComment", "Bool", "Age", 
                      "SignedNumber", "SignedInt", "EscapedString", "EnumDecPrefix", 
                      "OBkt", "CBkt", "OPar", "CPar", "Comma", "OrSymbol", 
                      "AndSymbol", "NotSymbol", "NeqSymbol", "EqSymbol", 
                      "GeqSymbol", "LeqSymbol", "LeSymbol", "GrSymbol", 
                      "AddSymbol", "SubSymbol", "MulSymbol", "DivSymbol", 
                      "ModSymbol", "RSSymbol", "LSSymbol", "Question", "ArgAssign", 
                      "Dot", "OptionCheckKW", "HelperCallKW", "ArgCheckKW", 
                      "LogicValCheckKW", "EventCheckKW", "CanReachLocKW", 
                      "CanReachEntranceKW", "CanReachRegionKW", "HasItemKW", 
                      "CountItemKW", "IsMQDungeonKW", "FloorKW", "CeilKW", 
                      "EntranceRefKW", "RegionRefKW", "LocRefKW", "ItemRefKW", 
                      "IfPrefix", "ElseIfPrefix", "ElsePrefix", "SwitchPrefix", 
                      "SwitchCaseKW", "SwitchDefaultKW", "SwitchReturnsKW", 
                      "EOL", "WS", "HelperPrefix", "QuantityPrefix", "LogicValSetPrefix", 
                      "NamePrefix", "ClassPrefix", "Classification", "ItemDefPrefix", 
                      "PresentWhenPrefix", "RulePrefix", "DestPrefix", "CantCrossChild", 
                      "CantCrossAdult", "EntranceDefPrefix", "LocClassDef", 
                      "LocationPrefix", "EventDefPrefix", "RegionDefPrefix", 
                      "LogicPrefix", "OptionsDefPrefix", "OptionPrefix", 
                      "StringsPrefix", "StringPrefix", "IntsPrefix", "IntPrefix", 
                      "FloatsPrefix", "FloatPrefix", "BoolPrefix", "MinKW", 
                      "MaxKW", "Ident", "Colon" ]

    RULE_fileDef = 0
    RULE_enumDef = 1
    RULE_enumVals = 2
    RULE_ifBlock = 3
    RULE_ifContinuation = 4
    RULE_elseIfBlock = 5
    RULE_elseBlock = 6
    RULE_switchExpr = 7
    RULE_return_case = 8
    RULE_caseList = 9
    RULE_caseDef = 10
    RULE_defaultCase = 11
    RULE_args = 12
    RULE_arg = 13
    RULE_helperDef = 14
    RULE_quantityDef = 15
    RULE_logicValSet = 16
    RULE_nameDef = 17
    RULE_classificationDef = 18
    RULE_itemDef = 19
    RULE_presentWhenDef = 20
    RULE_ruleDef = 21
    RULE_destDef = 22
    RULE_entranceDef = 23
    RULE_locationDef = 24
    RULE_eventDef = 25
    RULE_regionDef = 26
    RULE_logicDef = 27
    RULE_optionsDef = 28
    RULE_optionDefStrings = 29
    RULE_optionDefString = 30
    RULE_optionDefIntList = 31
    RULE_optionDefIntRange = 32
    RULE_optionDefInt = 33
    RULE_optionDefFloatList = 34
    RULE_optionDefFloatRange = 35
    RULE_optionDefFloat = 36
    RULE_optionDefBool = 37
    RULE_expr = 38
    RULE_basefunc = 39
    RULE_arg_pass = 40
    RULE_args_pass = 41
    RULE_optionCheck = 42
    RULE_helperCall = 43
    RULE_argCheck = 44
    RULE_logicValCheck = 45
    RULE_eventCheck = 46
    RULE_canReachLocCall = 47
    RULE_canReachEntranceCall = 48
    RULE_canReachRegionCall = 49
    RULE_hasItemCall = 50
    RULE_countItemCall = 51
    RULE_isDungeonMqCall = 52
    RULE_floorCall = 53
    RULE_ceilCall = 54
    RULE_value = 55
    RULE_parenExpr = 56
    RULE_enumValueRef = 57
    RULE_entranceRef = 58
    RULE_regionRef = 59
    RULE_locRef = 60
    RULE_itemRef = 61
    RULE_listSeparator = 62

    ruleNames =  [ "fileDef", "enumDef", "enumVals", "ifBlock", "ifContinuation", 
                   "elseIfBlock", "elseBlock", "switchExpr", "return_case", 
                   "caseList", "caseDef", "defaultCase", "args", "arg", 
                   "helperDef", "quantityDef", "logicValSet", "nameDef", 
                   "classificationDef", "itemDef", "presentWhenDef", "ruleDef", 
                   "destDef", "entranceDef", "locationDef", "eventDef", 
                   "regionDef", "logicDef", "optionsDef", "optionDefStrings", 
                   "optionDefString", "optionDefIntList", "optionDefIntRange", 
                   "optionDefInt", "optionDefFloatList", "optionDefFloatRange", 
                   "optionDefFloat", "optionDefBool", "expr", "basefunc", 
                   "arg_pass", "args_pass", "optionCheck", "helperCall", 
                   "argCheck", "logicValCheck", "eventCheck", "canReachLocCall", 
                   "canReachEntranceCall", "canReachRegionCall", "hasItemCall", 
                   "countItemCall", "isDungeonMqCall", "floorCall", "ceilCall", 
                   "value", "parenExpr", "enumValueRef", "entranceRef", 
                   "regionRef", "locRef", "itemRef", "listSeparator" ]

    EOF = Token.EOF
    Comment=1
    MLComment=2
    Bool=3
    Age=4
    SignedNumber=5
    SignedInt=6
    EscapedString=7
    EnumDecPrefix=8
    OBkt=9
    CBkt=10
    OPar=11
    CPar=12
    Comma=13
    OrSymbol=14
    AndSymbol=15
    NotSymbol=16
    NeqSymbol=17
    EqSymbol=18
    GeqSymbol=19
    LeqSymbol=20
    LeSymbol=21
    GrSymbol=22
    AddSymbol=23
    SubSymbol=24
    MulSymbol=25
    DivSymbol=26
    ModSymbol=27
    RSSymbol=28
    LSSymbol=29
    Question=30
    ArgAssign=31
    Dot=32
    OptionCheckKW=33
    HelperCallKW=34
    ArgCheckKW=35
    LogicValCheckKW=36
    EventCheckKW=37
    CanReachLocKW=38
    CanReachEntranceKW=39
    CanReachRegionKW=40
    HasItemKW=41
    CountItemKW=42
    IsMQDungeonKW=43
    FloorKW=44
    CeilKW=45
    EntranceRefKW=46
    RegionRefKW=47
    LocRefKW=48
    ItemRefKW=49
    IfPrefix=50
    ElseIfPrefix=51
    ElsePrefix=52
    SwitchPrefix=53
    SwitchCaseKW=54
    SwitchDefaultKW=55
    SwitchReturnsKW=56
    EOL=57
    WS=58
    HelperPrefix=59
    QuantityPrefix=60
    LogicValSetPrefix=61
    NamePrefix=62
    ClassPrefix=63
    Classification=64
    ItemDefPrefix=65
    PresentWhenPrefix=66
    RulePrefix=67
    DestPrefix=68
    CantCrossChild=69
    CantCrossAdult=70
    EntranceDefPrefix=71
    LocClassDef=72
    LocationPrefix=73
    EventDefPrefix=74
    RegionDefPrefix=75
    LogicPrefix=76
    OptionsDefPrefix=77
    OptionPrefix=78
    StringsPrefix=79
    StringPrefix=80
    IntsPrefix=81
    IntPrefix=82
    FloatsPrefix=83
    FloatPrefix=84
    BoolPrefix=85
    MinKW=86
    MaxKW=87
    Ident=88
    Colon=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LogicFileParser.EOF, 0)

        def logicDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicFileParser.LogicDefContext)
            else:
                return self.getTypedRuleContext(LogicFileParser.LogicDefContext,i)


        def optionsDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicFileParser.OptionsDefContext)
            else:
                return self.getTypedRuleContext(LogicFileParser.OptionsDefContext,i)


        def enumDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicFileParser.EnumDefContext)
            else:
                return self.getTypedRuleContext(LogicFileParser.EnumDefContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.EOL)
            else:
                return self.getToken(LogicFileParser.EOL, i)

        def getRuleIndex(self):
            return LogicFileParser.RULE_fileDef




    def fileDef(self):

        localctx = LogicFileParser.FileDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fileDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [76]:
                    self.state = 126
                    self.logicDef()
                    pass
                elif token in [77]:
                    self.state = 127
                    self.optionsDef()
                    pass
                elif token in [8]:
                    self.state = 128
                    self.enumDef()
                    pass
                elif token in [57]:
                    self.state = 130 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 129
                            self.match(LogicFileParser.EOL)

                        else:
                            raise NoViableAltException(self)
                        self.state = 132 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8 or _la==57 or _la==76 or _la==77):
                    break

            self.state = 138
            self.match(LogicFileParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EnumDecPrefix(self):
            return self.getToken(LogicFileParser.EnumDecPrefix, 0)

        def Ident(self):
            return self.getToken(LogicFileParser.Ident, 0)

        def OBkt(self):
            return self.getToken(LogicFileParser.OBkt, 0)

        def enumVals(self):
            return self.getTypedRuleContext(LogicFileParser.EnumValsContext,0)


        def CBkt(self):
            return self.getToken(LogicFileParser.CBkt, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.EOL)
            else:
                return self.getToken(LogicFileParser.EOL, i)

        def getRuleIndex(self):
            return LogicFileParser.RULE_enumDef




    def enumDef(self):

        localctx = LogicFileParser.EnumDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_enumDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(LogicFileParser.EnumDecPrefix)
            self.state = 141
            self.match(LogicFileParser.Ident)
            self.state = 142
            self.match(LogicFileParser.OBkt)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 143
                self.match(LogicFileParser.EOL)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.enumVals()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 150
                self.match(LogicFileParser.EOL)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.match(LogicFileParser.CBkt)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 157
                    self.match(LogicFileParser.EOL) 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumValsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.Ident)
            else:
                return self.getToken(LogicFileParser.Ident, i)

        def listSeparator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicFileParser.ListSeparatorContext)
            else:
                return self.getTypedRuleContext(LogicFileParser.ListSeparatorContext,i)


        def getRuleIndex(self):
            return LogicFileParser.RULE_enumVals




    def enumVals(self):

        localctx = LogicFileParser.EnumValsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_enumVals)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(LogicFileParser.Ident)
            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 164
                    self.listSeparator()
                    self.state = 165
                    self.match(LogicFileParser.Ident) 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IfPrefix(self):
            return self.getToken(LogicFileParser.IfPrefix, 0)

        def OPar(self):
            return self.getToken(LogicFileParser.OPar, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicFileParser.ExprContext)
            else:
                return self.getTypedRuleContext(LogicFileParser.ExprContext,i)


        def CPar(self):
            return self.getToken(LogicFileParser.CPar, 0)

        def OBkt(self):
            return self.getToken(LogicFileParser.OBkt, 0)

        def CBkt(self):
            return self.getToken(LogicFileParser.CBkt, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.EOL)
            else:
                return self.getToken(LogicFileParser.EOL, i)

        def ifContinuation(self):
            return self.getTypedRuleContext(LogicFileParser.IfContinuationContext,0)


        def getRuleIndex(self):
            return LogicFileParser.RULE_ifBlock




    def ifBlock(self):

        localctx = LogicFileParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(LogicFileParser.IfPrefix)
            self.state = 173
            self.match(LogicFileParser.OPar)
            self.state = 174
            self.expr(0)
            self.state = 175
            self.match(LogicFileParser.CPar)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 176
                self.match(LogicFileParser.EOL)
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(LogicFileParser.OBkt)
            self.state = 186
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 183
                    self.match(LogicFileParser.EOL) 
                self.state = 188
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 189
            self.expr(0)
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 190
                self.match(LogicFileParser.EOL)
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 196
            self.match(LogicFileParser.CBkt)
            self.state = 200
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 197
                    self.match(LogicFileParser.EOL) 
                self.state = 202
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 203
                self.ifContinuation()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContinuationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elseBlock(self):
            return self.getTypedRuleContext(LogicFileParser.ElseBlockContext,0)


        def elseIfBlock(self):
            return self.getTypedRuleContext(LogicFileParser.ElseIfBlockContext,0)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.EOL)
            else:
                return self.getToken(LogicFileParser.EOL, i)

        def getRuleIndex(self):
            return LogicFileParser.RULE_ifContinuation




    def ifContinuation(self):

        localctx = LogicFileParser.IfContinuationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifContinuation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 206
                self.match(LogicFileParser.EOL)
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 214
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.state = 212
                self.elseBlock()
                pass
            elif token in [51]:
                self.state = 213
                self.elseIfBlock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseIfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ElseIfPrefix(self):
            return self.getToken(LogicFileParser.ElseIfPrefix, 0)

        def OPar(self):
            return self.getToken(LogicFileParser.OPar, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogicFileParser.ExprContext)
            else:
                return self.getTypedRuleContext(LogicFileParser.ExprContext,i)


        def CPar(self):
            return self.getToken(LogicFileParser.CPar, 0)

        def OBkt(self):
            return self.getToken(LogicFileParser.OBkt, 0)

        def CBkt(self):
            return self.getToken(LogicFileParser.CBkt, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.EOL)
            else:
                return self.getToken(LogicFileParser.EOL, i)

        def ifContinuation(self):
            return self.getTypedRuleContext(LogicFileParser.IfContinuationContext,0)


        def getRuleIndex(self):
            return LogicFileParser.RULE_elseIfBlock




    def elseIfBlock(self):

        localctx = LogicFileParser.ElseIfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elseIfBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.match(LogicFileParser.ElseIfPrefix)
            self.state = 217
            self.match(LogicFileParser.OPar)
            self.state = 218
            self.expr(0)
            self.state = 219
            self.match(LogicFileParser.CPar)
            self.state = 223
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 220
                self.match(LogicFileParser.EOL)
                self.state = 225
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 226
            self.match(LogicFileParser.OBkt)
            self.state = 230
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 227
                    self.match(LogicFileParser.EOL) 
                self.state = 232
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 233
            self.expr(0)
            self.state = 234
            self.match(LogicFileParser.CBkt)
            self.state = 238
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 235
                    self.match(LogicFileParser.EOL) 
                self.state = 240
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 242
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 241
                self.ifContinuation()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ElsePrefix(self):
            return self.getToken(LogicFileParser.ElsePrefix, 0)

        def OBkt(self):
            return self.getToken(LogicFileParser.OBkt, 0)

        def expr(self):
            return self.getTypedRuleContext(LogicFileParser.ExprContext,0)


        def CBkt(self):
            return self.getToken(LogicFileParser.CBkt, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogicFileParser.EOL)
            else:
                return self.getToken(LogicFileParser.EOL, i)

        def getRuleIndex(self):
            return LogicFileParser.RULE_elseBlock




    def elseBlock(self):

        localctx = LogicFileParser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 244
            self.match(LogicFileParser.ElsePrefix)
            self.state = 248
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 245
                self.match(LogicFileParser.EOL)
                self.state = 250
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 251
            self.match(LogicFileParser.OBkt)
            self.state = 255
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 252
                    self.match(LogicFileParser.EOL) 
                self.state = 257
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

            self.state = 258
            self.expr(0)
            self.state = 262
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 259
                self.match(LogicFileParser.EOL)
                self.state = 264
                self._errHandler.sync(self)
                _la = self._input.LA(1)
